--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 .container {
      
     clear: both;
-    width: 960px;
+    width: 980px;
     margin: 0px auto;
      
 
@@ -37,7 +37,7 @@
     
     clear: both;
     width: 95%;
-    height: 500px;
+    height: auto;
     background-color: rgb(234, 234, 234);
     padding-top: 10px;
 }
@@ -50,15 +50,16 @@
     margin-top: 40px;
     margin-left: 30px;
     padding-right: 30px;
+    float: left;
 }
 
 .connect { 
     color: #4EAAA4;
     background-color: white;
     text-align: center;
-    position: absolute;
     top: 113px;
     left: 850px;
+    float: right;
     padding: 35px;
     font-size: 110%
     
@@ -106,6 +107,7 @@
 
 #footer {
 
+clear: both;    
 height: 60px;
 background-color: #333;
 border-top: 10px solid #4EAAA4;
@@ -177,3 +179,48 @@ width: 1217px;
     width: 145px;
     font-size: 80%;
 }
+
+
+@media screen and (max-width: 979px) {
+    .container {
+
+        width: 700px;
+      
+    }
+
+    .connect {
+
+        width: 200px;
+    }
+
+  }
+
+
+  @media screen and (max-width: 768px) {
+    .container {
+
+        width: 500px;
+      
+    }
+
+    .connect {
+
+        width: 100px;
+    }
+
+  }
+
+  @media screen and (max-width: 640px) {
+    .container {
+
+        width: 350px;
+      
+    }
+
+    .connect {
+
+        width: 200px;
+        
+    }
+
+  }
